fix title on mobile

--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -415,6 +415,7 @@ main {
     }
 
     .invitations {
+        text-align: center;
         font-size: 50px;
     }
 
